# SolarSystemGL

./: .gitignore  CMakeLists.txt  imgui.ini  main.cpp
docs/: README.md  api-reference.md  build-guide.md  documentation-index.md  grid.md  physics.md  shader-reference.md  technical-reference.md  user-guide.md
include/core/: Camera.h  Grid.h  Shader.h  Window.h
include/objects/: Planet.h
shaders/: FragmentShader.glsl  GridVertexShader.glsl
src/: main.cpp
src/core/: Camera.cpp  Camera.h  Constants.h  Grid.cpp  Grid.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/objects/: Planet.cpp  Planet.h
src/physics/: BodyState.h  PhysicsSystem.cpp  PhysicsSystem.h
src/ui/: UIManager.cpp  UIManager.h
